# gmail-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/: __init__.py  _client.py  gmail.py  main.py  server.py  smoke.py
